# autopilot

./: .env.sample  .gitignore  LICENSE  README.md  flow.md  hello_wordld.py  hello_world.py  main.py  pyproject.toml  requirements.txt  resume_vs_checkpoint.md  sample.config.toml  sample_schema.txt  sample_todos.md
.agentic-cli/: config.toml
.autopilot/: config.toml
.autopilot/tools/: test_tool.py
.github/workflows/: python-publish.yml
agent/: agent.py  events.py  persistence_manager.py  session.py
autopilot/: main.py
autopilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
autopilot/agent/: agent.py  events.py  persistence_manager.py  session.py
autopilot/client/: llm_client.py  response.py
autopilot/config/: config.py  loader.py
autopilot/context/: compaction.py  loop_detector.py  manager.py
autopilot/hooks/: hook_system.py
autopilot/prompts/: system.py
autopilot/safety/: approval.py
autopilot/scripts/: test_tool.py
autopilot/tools/: base.py  discovery.py  registry.py
autopilot/tools/builtin/: __init__.py  apply_patch.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
autopilot/ui/: tui.py
autopilot/utils/: errors.py  markdown.py  paths.py  text.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: compaction.py  loop_detector.py  manager.py
hooks/: hook_system.py
prompts/: system.py
safety/: approval.py
scripts/: test_tool.py
tools/: base.py  discovery.py  memory.py  registry.py  subagents.py
tools/builtin/: __init__.py  apply_patch.py  edit_file.py  glob.py  grep.py  list_dir.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
tools/subagents/: subagent_registry.py  subagents.py
ui/: tui.py
utils/: markdown.py  paths.py  text.py
(+5 files in other folders)
